  * Removed version to the pro file and added it only at build time.
  * Cancel msgbox did not disappear when Observer notices that call has occured.