@@ -1,2 +1,3 @@
-  * Removed version to the pro file and added it only at build time.
-  * Cancel msgbox did not disappear when Observer notices that call has occured.
+  * Registered numbers now say Dial out or Dial back. Easier to understand.
+  * If the dial out method is not enabled, not valid or otherwise unusable, don't show it.
+  * Upper bound check on the registered number array
